# Fluid-NN-AIPT

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
docs/: DATA_REQUEST.md  RESEARCH_LOG.md  RESULTS_SUMMARY.md
docs/notes/: spike_v1_diagnosis.md
experiments/: adaptivity.py  dp_drift.py  power_sweep.py  real_eval.py  robust_checkpoints.py  spike.py  streaming.py
fluidnn/: __init__.py  metrics.py  realdata.py
fluidnn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fluidnn/channel/: __init__.py  dataset.py  link.py  link_dp.py  manakov.py  modulation.py  pulse.py  receiver.py  ssfm.py
fluidnn/models/: __init__.py  cfc.py  lstm.py  mlp.py
fluidnn/training/: __init__.py  harness.py
tests/: test_manakov.py  test_metrics_awgn.py  test_modulation.py  test_pulse.py  test_realdata.py  test_receiver.py  test_ssfm.py  test_streaming.py
