[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fluidnn"
version = "0.1.0"
description = "Liquid Neural Networks for real-time nonlinear equalization in coherent optical systems"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.optional-dependencies]
ml = ["torch>=2.2", "matplotlib>=3.8"]

[tool.setuptools.packages.find]
include = ["fluidnn*"]
